--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -1,27 +1,34 @@
 .logo {
-    padding-top: 30px;
-    width: 15vw;
-    height: auto;
+    padding-top: 2%;
+    /* width: 15vw; */
+    width: 172px;
+    height: auto; 
 }
 
 
 .logoDiv{
+    padding: 15px; 
     display: flex;
-    align-content: center;
-    height: auto;
+    /* align-content: center; */
+    height: auto; 
 }
 
 
 .home {
     background-color: #2d2e31;
-    height: 100vh;
     color: white
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 3em;
     font-family: 'Bebas Neue', cursive;
     text-shadow: #e0e0e0 1px 1px 0;
+}
+
+.main {
+    width: 85vw; 
+    margin: auto; 
+    padding: 10% 0 10% 0;
 }
 
 .Coco {
@@ -33,4 +40,14 @@ h1 {
 
 .ytp-cued-thumbnail-overlay-image {
     background-image: url("https://mocah.org/thumbs/359134-4k-wallpaper.jpg");
+}
+
+@media screen and (max-width: 650px) { 
+    .logoDiv {
+        justify-content: center ;
+    }
+
+    h1 {
+        font-size: 7vw;
+    }
 }
