--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,20 +1,31 @@
 .nav-style {
+    height: auto;
+    min-width: 100vw;
+    /* position: fixed; */
     display: flex;
     align-items: center;
-    background-color: #2d2e31;
-    padding: 10px;
+    /* background-color: #2d2e31; */
+    background-color: transparent;
+    /* padding: 10px; */
+    margin-bottom: 10vh;
 }
 
+logoContainer {
+    display: flex;
+}
+
+ul, a {
+    display: flex;
+    padding: 15px;
+}
 
 li {
-    font-size: 26px;
+    font-size: 2vw;
     display: inline;
     text-decoration: none;
     /* margin-left: 30px; */
     color: white;
-    text-align: center;
-    margin: 0 50px;
-    
+    text-align: center;    
 }
 
 li:hover{
@@ -22,10 +33,8 @@ li:hover{
 }
 
 .logo-nav{
-    display: flex;
-    
+    display: flex;    
     height: auto;
-    width: 12vw;
+    width: 13vw;
+    padding-top: 1vh;
 }
-
-
