fixed bugs after merging

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,13 +1,13 @@
 .nav-style {
     height: auto;
-    min-width: 100vw;
+    /* min-width: 100vw; */
     /* position: fixed; */
     display: flex;
     align-items: center;
     /* background-color: #2d2e31; */
     background-color: transparent;
     /* padding: 10px; */
-    margin-bottom: 10vh;
+    margin-bottom: 5vh;
 }
 
 .logoContainer {
