--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -10,9 +10,11 @@
 }
 
 .catalogContainer {
+    background: rgb(110,139,137);
+    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%);
     margin: 0;
     min-height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     position: relative;
     /* z-index: 1;
     background: inherit; */
@@ -42,11 +44,10 @@
 .movie-grid {
     width: 100%;
     height: 100%;
-    padding: 3% 5% 3% 5%;
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
     /* background-color: #2d2e31; */
-    background: rgb(110,139,137);
-background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%);
+    /* background: rgb(110,139,137);
+    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%); */
 }
