--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,7 +7,7 @@
     left: 0;
     width: 100%;
     margin-bottom: 20px;
-    font-size: 18px;
+    font-size: 0.8em;
     display: flex;
     justify-content: space-between;
 }
@@ -23,6 +23,30 @@ a:hover{
     transition: 200ms ease-in;
 }
 
-.media {
-    margin-left: 10px;
+.media:hover{
+    color: #FFDC6C;
+    transition: 200ms ease-in;
 }
+.social {
+    display: flex;
+    justify-content: space-evenly;
+    width: 20%;
+    font-size: 2em;
+}
+
+@media screen and (max-width : 650px){
+    .footer {
+    flex-direction: column-reverse;
+    align-items: center;
+    }
+    .social {
+        padding-bottom: 3%;
+        width: 50%;
+        text-align: center;
+    }
+    .cgu{
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+
