--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -57,3 +57,11 @@
     background-color: transparent;
     margin-top: 1rem;
 }
+
+.link{
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.social {
+    color: rgba(255, 255, 255, 0.5);
+}
