--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -20,6 +20,7 @@
 .catalogContainer {
     background: rgb(110,139,137);
     background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%);
+    background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
     /* width: 100vw; */
