--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -7,7 +7,7 @@
 }
 
 .catalogPage {
-    /* background-image: url(../assets/leather.jpg); */
+    /* USE background-image: url(../assets/exemple.jpg); to Apply an image as a background */
     background-color: rgb(148, 48, 48);
     background: rgb(110,139,137);
     background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%);
@@ -23,28 +23,11 @@
     background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
-    /* width: 100vw; */
     position: relative;
-    /* z-index: 1;
-    background: inherit; */
-    /* display: flex; */
-    /* justify-content: space-between;
-    align-items: center; */
-    /* overflow: hidden; */
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 
 }
-
-/* .catalogContainer::before {
-    content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
-    inset: 0;
-    filter: blur(10px);
-    margin: -40px;
-} */
 
 .testFrost {
     z-index: 1;
@@ -57,9 +40,6 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
-    /* background-color: #2d2e31; */
-    /* background: rgb(110,139,137);
-    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%); */
 }
 
 .footer {
