--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -6,6 +6,14 @@
 .loading-img{
     height: 350px;
     width: 350px;
-    transition: all 15s;
+    animation: rotating 1s linear infinite;
+}
 
+@keyframes rotating {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
