modif navbar ajout route FicheFilm + Mini jeu

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,7 +22,7 @@ li {
     font-size: 2vw;
     display: inline;
     text-decoration: none;
-    /* margin-left: 30px; */
+    margin: 0 20px;
     color: white;
     text-align: center;    
 }
