ajout Composant CardSerie et mise en page

--- a/src/components/CardSerie.css
+++ b/src/components/CardSerie.css
@@ -1,12 +1,12 @@
-.cardFilm {
-    background-image: url(../assets/background.jpg); 
+.cardSerie {
+    background-image: url(../assets/backgroundS1.jpg); 
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
 }
 
-.cardFilmContainer {
+.cardSerieContainer {
     min-height: 100vh;
     background: rgba(20,20,20, 0.7);
     background-repeat: no-repeat !important;   
@@ -65,7 +65,7 @@
     
 }
 
-.info {
+.infoSerie {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
@@ -84,10 +84,6 @@
     height: 3vh;
     text-align: center;
     border-radius: 5px 5px 5px 5px / 5px 5px 5px 5px;
-}
-
-.holderPegi {
-    padding-left: 20px;
 }
 
 .popcorn {
@@ -121,7 +117,7 @@
 }
 
 .textGrey {
-    color: #333;
+    color: #ffdc6c;
     font-style:normal;
     font-weight: bold;
     font-size: 1.9vh;
@@ -174,5 +170,5 @@
 .roleName {
     position: absolute;
     bottom: 8%;
-    color: #1f1f1d;
+    color: #b0b09b;
 }
