Added subroute /Catalogue/FicheFilm

--- a/src/components/CardFilm.css
+++ b/src/components/CardFilm.css
@@ -4,6 +4,10 @@
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
 }
 
 .cardFilmContainer {
