--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -24,8 +24,8 @@
     margin: 0;
     min-height: 100vh;
     position: relative;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    /* backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); */
 
 }
 
@@ -40,6 +40,7 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
+    position: fixed;
 }
 
 .footer {
