--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,3 +1,6 @@
+*{
+    text-decoration: none;
+}
 .footer {
     margin-top: 1rem;
     padding: 1rem;
@@ -14,23 +17,28 @@
 .link{
     margin-left: 15px;
     color: #fff;
-    text-decoration: none;
+    
 }
-
+a {
+    color: rgba(255, 255, 255, 0.5);  
+}
 a:hover{
     color: #FFDC6C;
     transition: 200ms ease-in;
+    
 }
 
 .media:hover{
     color: #FFDC6C;
     transition: 200ms ease-in;
+    text-decoration: none;
 }
 .social {
     display: flex;
     justify-content: space-evenly;
     width: 20%;
     font-size: 2em;
+    text-decoration: none;
 }
 
 @media screen and (max-width : 650px){
