--- a/src/components/CardFilm.css
+++ b/src/components/CardFilm.css
@@ -18,6 +18,17 @@
     -webkit-backdrop-filter: blur(4px)!important;
 }
 
+.closeModal {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2%;
+    padding-top: 2%;
+    color: #292928;
+}
+
+.closeIcone:hover {
+    color: white;  
+}
 .testFrost {
     z-index: 1;
 }
@@ -34,6 +45,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    align-items: center;
     z-index: -5;
 }
 
@@ -146,6 +158,10 @@
     object-fit: cover;
     width: 300px;
     height: auto;
+}
+
+.imgCast:hover {
+    color: #FFDC6C;
 }
 
 .divCarre {
