--- a/src/components/Quizz.css
+++ b/src/components/Quizz.css
@@ -4,7 +4,6 @@
     display: flex;
     align-content: center;
     justify-content: center;
-    /* border: 10px solid black; */
     height: 1;
    width: 100vw;
     }
@@ -15,48 +14,60 @@
         border: 2px solid red;
         display: flex;
         justify-content: flex-end;
-        
+        padding-right: 30px;
         }
 
 .title-suiviquestion { 
     text-align: left;
-    border-bottom: 5px solid black;
     width: fit-content;
-margin-right: 30px;
+    background-color: whitesmoke;
+    border: 5px solid rgba(151, 150, 150, 0.171);
+    box-shadow: 0 5px 15px #333333;
+    border-radius: 15px;
+    padding: 5px;
     }    
 
 .ConteneurQuestionReponse{
-    /* border: 3px solid green; */
+   border: 3px solid green;
     width: 100%;
-    margin-top: 10%; 
+    padding: 50px 30px 0 30px;
 } 
 
-
+.questions-container{
+    display: flex;
+    justify-content: center;  /* A REALIGNER */
+    width: cover;
+    border: 2px solid black;
+}
 
 .questions{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 25px;
+    font-size: 1.2rem;
     text-align: center;
     border-radius: 10px;
-    margin: 0px 30px 5px 30px;
-    background-color: white;
+    margin-bottom: 5px;
+    background-color: whitesmoke;
+    border: 5px solid rgba(151, 150, 150, 0.171);
+    box-shadow: 0 5px 15px #333333;
+    border-radius: 15px;
     padding: 3% 5%;
     height: 100px;
+    width: 100%;
+    max-width: 800px;
     ;
 }
 
 
 .button-grid{
     display:flex;
-    /* justify-content: center; */
+    justify-content: center;
     flex-wrap: wrap;
-    /* padding: 20px; */
-    /* border: 2px solid red; */
     width: 100%;
+    max-width: 950px;
     padding : 2% 0px;
-        /* flex-wrap: nowrap; */
+    border: 2px solid red;
     }
 
 .quizz-button{
@@ -67,13 +78,115 @@ margin-right: 30px;
     width: 300px;
     font-size: 16px;
     margin: 10px;
-    padding: 0 5%;
+    padding: 0 15px;
     text-align: justify;
     background-color: #FFDC6C;
+    border: 5px solid #bb951842;
+    box-shadow: 0 5px 15px #333333;
+    font-weight: bold;
     border-radius: 15px;
-    
+}
+
+/******** Tableau résultat 1 *********/
+
+.titre-tableau-resultat{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+margin: 50px 0;
+text-align: center;
+/* border: 2px solid red; */
+font-size: 4vw;
+color: whitesmoke;
+text-shadow: 3px 2px 5px black;
+height: 100px;
+}
+
+.tableau-titre-resultat {
+    display: flex;
+    justify-content: center;
+    background-color: whitesmoke;
+    border: 5px solid rgba(151, 150, 150, 0.171);
+    box-shadow: 0 5px 15px #333333;
+    border-radius: 15px;
+    height:auto;
+    padding: 3%;
+    margin:0 5% 0 5%;
+
+    font-size: 27px;
+    text-align: center;
+color: black;
+width: auto;
+}
+
+.phrase-pre-score{
+    border-top: 3px solid black;
+margin-top: 10px;
+font-size: 20px;
+}
+
+.score-final {
+    color:#dbbf1c;
+    font-size: 1.7em;
+}
+
+.tableau-resultat {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 12px;
+    background-color: whitesmoke;
+    border: 5px solid rgba(151, 150, 150, 0.171);
+    box-shadow: 0 5px 15px #333333;
+    border-radius: 15px;
+    padding: 3%;
+    margin: 5%;
+    width: auto;
+
+}
+.phrase-pre-resultat{
+    text-align: center;
+    border-bottom: 3px solid black;
+    border-width: object;
+margin-top: 10px;
+font-size: 20px;
+font-weight: bold;
+padding-bottom: 10px;
+
 }
 
 
 
+.resultat-positif, .resultat-negatif {
+    margin-top: 15px;
+}
 
+.resultat-positif {
+    font-size: 1.7em;
+color: rgb(10, 87, 10);}
+
+.resultat-negatif {
+    font-size: 1.7em;
+color: rgb(138, 17, 17);}
+
+/******** Tableau résultat 2 *********/
+
+/* .tableau-titre-resultat {
+    font-size: 12px;
+    background-color: whitesmoke;
+    border: 5px solid rgba(151, 150, 150, 0.171);
+    box-shadow: 0 5px 15px #333333;
+    border-radius: 15px;
+    padding: 3%;
+
+}
+
+.tableau-resultat {
+    font-size: 12px;
+    background-color: whitesmoke;
+    border: 5px solid rgba(151, 150, 150, 0.171);
+    box-shadow: 0 5px 15px #333333;
+    border-radius: 15px;
+    padding: 3%;
+
+} */
