changement d'API, ajout du bakcdrop ...

--- a/src/components/CardFilm.css
+++ b/src/components/CardFilm.css
@@ -10,7 +10,7 @@
 
 
 .cardFilm {
-    background-image: url(../assets/background.jpg); 
+    /* background-image: url(../assets/background.jpg);  */
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
     background-size: cover;
