--- a/src/components/TableauScore.css
+++ b/src/components/TableauScore.css
@@ -104,7 +104,7 @@ padding-bottom: 10px;
 
 }
 
-.display-linebreak { /*SAUT DE LIGNE*/
+.display-linebreak { /*SAUT DE LIGNE - M'empeche de commenter*/
     white-space: pre-line;
     margin-top: 20px;
     text-align: justify;
