--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -8,9 +8,9 @@
 
 .catalogPage {
     /* USE background-image: url(../assets/exemple.jpg); to Apply an image as a background */
-    background-color: rgb(148, 48, 48);
+    background-color: rgb(45, 46, 49);
     background: rgb(110,139,137);
-    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%);
+    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -19,13 +19,13 @@
 
 .catalogContainer {
     background: rgb(110,139,137);
-    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(102,66,68,1) 100%);
+    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
     background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
     position: relative;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    /* backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); */
 
 }
 
@@ -40,6 +40,18 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
+    /* position: fixed; */
+}
+
+/* TEST */
+.none {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    position: fixed;
 }
 
 .footer {
@@ -47,10 +59,3 @@
     margin-top: 1rem;
 }
 
-.link{
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.social {
-    color: rgba(255, 255, 255, 0.5);
-}
